--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
     "express": "^4.18.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
